--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
@@ -56,7 +57,7 @@ body {
 }
 
 .auth-card input {
-  width: 100%;
+  width: 92%;
   padding: 10px 12px;
   margin-top: 6px;
   border: 1px solid #e5e7eb;
@@ -235,7 +236,7 @@ body {
   background: white;
   padding: 36px 42px;
   border-radius: 16px;
-  box-shadow: 0 8px 24px rgba(0,0,0,0.05);
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.05);
   text-align: center;
   min-width: 300px;
 }
@@ -281,9 +282,17 @@ body {
 
 /* Анимация */
 @keyframes dot {
-  0% { opacity: 0.3; }
-  50% { opacity: 1; }
-  100% { opacity: 0.3; }
+  0% {
+    opacity: 0.3;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0.3;
+  }
 }
 
 /* Текст */
@@ -347,7 +356,7 @@ body {
   background: white;
   padding: 18px 20px;
   border-radius: 14px;
-  box-shadow: 0 8px 24px rgba(0,0,0,0.04);
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.04);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -433,7 +442,7 @@ body {
   background: white;
   border-radius: 14px;
   padding: 8px;
-  box-shadow: 0 8px 28px rgba(0,0,0,0.03);
+  box-shadow: 0 8px 28px rgba(0, 0, 0, 0.03);
 }
 
 .history-item {
@@ -491,7 +500,8 @@ body {
 
 /* Кнопка Удалить на истории */
 .delete-btn {
-  background: #ef4444; /* красный цвет, в стиле danger */
+  background: #ef4444;
+  /* красный цвет, в стиле danger */
   color: white;
   border: none;
   padding: 8px 16px;
@@ -501,7 +511,8 @@ body {
 }
 
 .delete-btn:hover {
-  background: #dc2626; /* чуть темнее при наведении */
+  background: #dc2626;
+  /* чуть темнее при наведении */
 }
 
 /* Контейнер с кнопками Посмотреть и Удалить */
@@ -513,7 +524,8 @@ body {
 /* Дата создания под количеством карточек */
 .file-date {
   font-size: 12px;
-  color: #9ca3af; /* светло-серый, как у других второстепенных текстов */
+  color: #9ca3af;
+  /* светло-серый, как у других второстепенных текстов */
   margin-top: 2px;
 }
 
@@ -533,7 +545,7 @@ body {
   gap: 14px;
 }
 
-.history-info > div {
+.history-info>div {
   display: flex;
   flex-direction: column;
 }
